ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_History__c/Intelligence_Report_History__c.object-meta.xml
<CustomObject>
    <description>Used to store the email that is sent out for audit reference</description>
    <label>Intelligence Report History</label>
    <nameField>
        <displayFormat>IntelAudit-{00000}</displayFormat>
        <label>Intelligence Report History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intelligence Report History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>