ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_History__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <description>Body of Email for Intelligence Report associated with this audit record.  Populated via Trigger when the Intel Report email is sent out</description>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>