ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_History__c/fields/Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipients__c</fullName>
    <description>List of email recipients on Intelligence Report associated with this audit record.  Populated via Trigger when the Intel Report email is sent out</description>
    <label>Email Recipients</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>