ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_History__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <description>Subject from Email for Intelligence Report associated with this audit record.  Populated via Trigger when the Intel Report email is sent out</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>