ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report_History__c/fields/Intelligence_Report__c.field-meta.xml
<CustomField>
    <fullName>Intelligence_Report__c</fullName>
    <description>Intelligence Report associated with this audit record.  Populated via Trigger when the Intel Report email is sent out</description>
    <label>Intelligence Report</label>
    <referenceTo>Intelligence_Report__c</referenceTo>
    <relationshipLabel>Intelligence Report History</relationshipLabel>
    <relationshipName>Intelligence_Report_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>